[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-recon"
version = "1.0.0"
description = "Advanced Network Reconnaissance & Security Assessment Toolkit"
readme = "README.md"
authors = [
    {name = "ChickenWithACrown"},
]
maintainers = [
    {name = "ChickenWithACrown"},
]
maintainers_contact = "GitHub Issues or Discord: ChickenWithACrown"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.1",
    "python-whois>=0.9.3",
    "dnspython>=2.3.0",
    "ipaddress>=1.0.23",
    "beautifulsoup4>=4.9.3",
    "cryptography>=3.4.7",
    "geoip2>=4.1.0",
    "python-nmap>=0.7.1",
    "colorama>=0.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.7b0",
    "isort>=5.0",
    "flake8>=3.9",
    "mypy>=0.910",
    "pre-commit>=2.0",
]

[project.urls]
Homepage = "https://github.com/ChickenWithACrown/nexus-recon"
Bug Tracker = "https://github.com/ChickenWithACrown/nexus-recon/issues"
Documentation = "https://github.com/ChickenWithACrown/nexus-recon#readme"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]
max-complexity = 10
select = "E9,F63,F7,F82,E225,E226,E252,E261,E265,E266,E302,E305,E402,E501,E731,E741,W191,W291,W292,W293,W391,W503,W504"

[mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true
pretty = true
